--- a/index.html
+++ b/index.html
@@ -3,19 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Nabla&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Baloo+Tammudu+2:wght@500;600&family=Noto+Sans+KR&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
     <title>Momentum App</title>
 </head>
 <body>
     <div id="whole_wrapper">
-        <header>Timeless Pages</header>
+        <header></header>
         <section class="mainView" id="canvas">
             <nav></nav>
             <main>
-                <h2 id="clock">00:00</h2>
+                <h2 id="clock">00:00:00</h2>
                 <form class="hidden" id="login-form">
                     <input 
                     required 
@@ -30,7 +32,7 @@
                     <input type="text" placeholder="Write a TODO and Press" required />
                 </form>
                 <ul id="todo-list"></ul>
-                <div id="quote">
+                <div id="quotes">
                     <span></span>
                     <span></span>
                 </div>
@@ -38,7 +40,6 @@
         </section>
         <aside></aside>
         <footer>
-            Weather
             <div id='weather'>
                 <span></span>
                 <span></span>
@@ -50,6 +51,6 @@
     <script src="./js/clock.js"></script>
     <script src="./js/quotes.js"></script>
     <script src="./js/todo.js"></script>
-    <!-- <script src="./js/weather.js"></script> -->
+    <script src="./js/weather.js"></script>
 </body>
 </html>
